--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,14 @@
+.header {
+  width: 100%;
+  height: 160px;
+  background-color: #f472b6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+}
+
 .ListPays {
   display: flex;
   justify-content: center;
